--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,6 @@
 @import "./components/card.scss";
 // @import "./components/faq.scss";
 @import "./components/accordeon.scss";
+@import "./pages/LogementDetail.scss";
+@import "./components/carrousel.scss";
+@import "./components/logementInfo.scss";
