--- a/src/styles/components/accordeon.scss
+++ b/src/styles/components/accordeon.scss
@@ -1,6 +1,4 @@
 .accordeon-container {
-  margin: 40px 180px;
-
   button {
     width: 100%;
     color: white;
@@ -10,11 +8,14 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 20px 10px 15px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
 
     h2 {
-      font-family: $font-2-reg;
+      font-family: $font-1;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 34.22px;
     }
 
     span {
@@ -27,7 +28,15 @@
     background-color: #f6f6f6;
     padding: 20px;
     color: $color-1;
-    font-family: $font-2-reg;
+    font-family: $font-1;
     font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .accordeon-container {
+    h2 {
+      font-size: 20px !important;
+    }
   }
 }
