--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -42,3 +42,14 @@
     }
   }
 }
+
+@media screen and (max-width: 415px) {
+  .card-container {
+    margin: 20px 20px;
+    grid-template-columns: 1fr;
+
+    .card-content {
+      height: 255px;
+    }
+  }
+}
