--- a/src/styles/components/carrousel.scss
+++ b/src/styles/components/carrousel.scss
@@ -24,7 +24,7 @@
   padding: 10px;
   cursor: pointer;
   font-size: 70px;
-  font-family: $font-2-reg;
+  font-family: $font-1;
   z-index: 1;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .indicator {
-  font-family: $font-2-reg;
+  font-family: $font-1;
   font-size: 18px;
   position: absolute;
   bottom: 10px;
