--- a/src/styles/components/faq.scss
+++ b/src/styles/components/faq.scss
@@ -1,38 +1,13 @@
-.accordeon-container {
-  margin: 40px 180px;
-  border: 1px solid violet;
+.faq-about-accordeon {
+  margin: 40px 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
 
-  .accorderon-item {
-    background-color: gray;
-    border: 1px solid firebrick;
-
-    .accordeon-btn {
-      width: 100%;
-      color: white;
-      background-color: $color-1;
-      font-size: 24px;
-      line-height: 34.22px;
-      display: flex;
-      justify-content: space-between;
-      padding: 10px 20px 10px 15px;
-      border-radius: 5px;
-      border: none;
-
-      h2 {
-        font-family: $font-2-reg;
-      }
-
-      span {
-        cursor: pointer;
-      }
-    }
-    .accordeon-content {
-      background-color: #f6f6f6;
-      padding: 20px;
-      margin-bottom: 10px;
-      color: $color-1;
-      font-family: $font-2-reg;
-      font-size: 20px;
-    }
+@media screen and (max-width: 415px) {
+  .faq-about-accordeon {
+    margin: 20px 20px;
+    gap: 20px;
   }
 }
