--- a/src/styles/components/heroBanner.scss
+++ b/src/styles/components/heroBanner.scss
@@ -26,3 +26,18 @@
     text-align: center;
   }
 }
+
+@media screen and (max-width: 415px) {
+  .hero-banner {
+    margin: 0 20px;
+    height: 111px;
+    img {
+      width: 100%;
+      height: 111px;
+    }
+
+    p {
+      font-size: 24px;
+    }
+  }
+}
