--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,8 +6,10 @@
 @import "./components/heroBanner.scss";
 @import "./pages/notFound.scss";
 @import "./components/card.scss";
-// @import "./components/faq.scss";
+@import "./components/faq.scss";
 @import "./components/accordeon.scss";
-@import "./pages/LogementDetail.scss";
+@import "./pages/logementDetail.scss";
 @import "./components/carrousel.scss";
 @import "./components/logementInfo.scss";
+@import "./components/rating.scss";
+@import "./components/accordeonLogement.scss";
