--- a/src/styles/pages/notFound.scss
+++ b/src/styles/pages/notFound.scss
@@ -5,8 +5,10 @@
   align-items: center;
   gap: 100px;
   color: $color-1;
+  margin: 100px 0;
 
   h1 {
+    font-weight: 500;
     font-size: 36px;
     line-height: 51.34px;
   }
@@ -16,5 +18,29 @@
     line-height: 25.67px;
     text-decoration: none;
     color: $color-1;
+
+    :hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .not-found {
+    img {
+      width: 198px;
+      height: 99px;
+    }
+
+    h1 {
+      font-size: 18px;
+      line-height: 25.67px;
+      text-align: center;
+      width: 260px;
+    }
+
+    a {
+      font-size: 14px;
+    }
   }
 }
