Ajout du responsiv V.1

--- a/src/styles/components/accordeon.scss
+++ b/src/styles/components/accordeon.scss
@@ -35,8 +35,11 @@
 
 @media screen and (max-width: 415px) {
   .accordeon-container {
+    button {
+      padding: 5px;
+    }
     h2 {
-      font-size: 20px !important;
+      font-size: 18px !important;
     }
   }
 }
