--- a/src/styles/components/carrousel.scss
+++ b/src/styles/components/carrousel.scss
@@ -6,12 +6,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 10px;
 }
 
 .slide {
   width: 100%;
   object-fit: contain;
   transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
 }
 
 .prev-button,
@@ -49,4 +51,11 @@
   padding: 5px 10px;
   border-radius: 5px;
   z-index: 1;
+}
+
+@media screen and (max-width: 415px) {
+  .carrousel {
+    padding: 0 10px;
+    border-radius: 10px;
+  }
 }
